# safelicensing-pypi

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  markdown-page.html  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs.yml  publish.yml  release.yml
assets/css/: styles.e601337b.css
assets/js/: 1df93b7f.81301d70.js  1df93b7f.e7b84e5b.js  1df93b7f.e7c1ba7f.js  3b239c88.0712163d.js  4c678320.f2d009d7.js  59f7b561.24b47d4f.js  59f7b561.542b73a1.js  5da30ff6.06869b03.js  5da30ff6.ad0277cf.js  693c00ad.2d99943c.js  74876495.8d54265d.js  74876495.f4316244.js  81177d30.da169b65.js  a19b665e.5379ed49.js  a19b665e.7578f07b.js  a19b665e.cad3e594.js  a19b665e.ffdf342b.js  ba61d949.45eb5425.js  ba61d949.8998f308.js  ce2fcb03.26fde934.js  ce2fcb03.8cd6fd59.js  e83badbb.9e64ffe3.js  e83badbb.bb81fd87.js  f8409a7e.597ce359.js  f8409a7e.5d72ef6a.js  fa4d91bf.98110222.js  main.7ef4f498.js  main.9de4021c.js  main.f681be9f.js  runtime~main.0bf08acc.js  runtime~main.16a5a748.js  runtime~main.2c9f54bf.js  runtime~main.a036a687.js  runtime~main.cc5e7914.js  runtime~main.eb442489.js
docs/: citation.html  cli.html  development.html  encryption-details.html  installation.html  intro.html  quickstart.html
docs/api/: load-model.html  low-level.html  protect-image.html  protect-video.html
safelicensing/: __init__.py  app.py  cli.py  detection.py  encryption.py  video.py
tests/: conftest.py  test_detection.py  test_encryption.py  test_video.py
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
website/docs/: citation.mdx  cli.mdx  development.mdx  encryption-details.mdx  installation.mdx  intro.mdx  quickstart.mdx
website/docs/api/: _category_.json  load-model.mdx  low-level.mdx  protect-image.mdx  protect-video.mdx
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
